# colorlog_cpp

./: CMakeLists.txt  Makefile  README.md
include/: colorlog.hpp  colorlog_cpp17.hpp
tests/: colorlog_async_test.cpp  colorlog_concepts_test.cpp  colorlog_unit_test.cpp
